# montycarlo

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
benches/: engine.rs
docs/: release.md
examples/: dice.rs
scripts/: cut-release.sh
src/: lib.rs  main.rs
tests/: engine_integration.rs
