[package]
authors = ["Ian Cleary <iancleary@hey.com>"]
description = "Generic Monte Carlo simulation engine for Rust"
documentation = "https://docs.rs/montycarlo"
edition = "2021"
homepage = "https://github.com/iancleary/montycarlo"
license = "MIT"
name = "montycarlo"
repository = "https://github.com/iancleary/montycarlo"
version = "0.1.0"

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dependencies]
rand = "0.8"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine"
harness = false
